src/main/resources/static/css/main.css
*{
	font-family:"Montserrat-Light";
}

a {
	color: #2C3E52;
}

a:hover, .cursor-pointer{
	cursor: pointer;
	text-decoration: none;
}

dl {
	display: flex;
	font-size: 15.5px;
}

dt {
	margin-right: 5px;
}

#wrapper {
	min-height: 100%;
	position: relative;
	padding-top: 10px;
	padding-bottom: 100px;
}

.btn-download {
	display: block;
	border: 1px none;
	width: 200px;
	height: 40px;
	border-radius: 5px !important;
	margin-left: 193px;
}

.btn-download label{
	cursor:pointer;
}

#busca-avancada{
	display:none;
}

#btn-multi-download{
	display: none;
	margin-left:60px
}

#campo-pesquisado{
	height:45px;
}

#campo-pesquisado-navbar{
	width:200px;
	transition:0.4s ease-in;
}
#campo-pesquisado-navbar:focus{
	width: 300px;
}

#divSocios .list-group-item {
	border-radius: 0;
	border-width: 1px 0 0;
	margin: 0 -15px 20px;
}

#registrolivre {
	font-size: 50px;
}

.table-hover tr:hover {
	cursor: pointer;
}

.a-color-black {
	text-decoration: none;
	color: #000;
}

.a-color-black:hover {
	text-decoration: none;
}

.avatar{
	text-align: center;
	margin-top:35px;
}

.avatar .nome{
	font-size: 17px;
	height: 30px;
	margin-top:12px;
}

.avatar .tipo{
	font-size: 14px;
}

.bg-video{
	position: fixed;
	right: 0;
	bottom: 0;
	min-width: 100%;
	min-height: 100%;
	width: auto;
	height: auto;
	z-index: -1000;
	background: url(../assets/img/ci.jpg) no-repeat;
	background-size: cover;
}

.botao-busca-home{
	width:60px;
	height:45px;
}

.botao-busca-navbar{
	width:40px;
	height:34px;
}

.centralize {
	text-align: center;
}

.color-red {
	color: #A94442;
}

.container{
	position: relative;
}

.content{
	margin-bottom:60px;
}

.content{
	margin: 0 auto;
	margin-top:65px;
	width: 95%;
}

.cor-vermelha {
	color: red;
	font-size: 20px;
}

.datatable-selecao, #seleciona-todos{
	transform: scale(2);
}

.erro{
	background: none repeat scroll 0 0 rgba(0, 0, 0, 0.25);
	font-weight: bold;
	height: 500px;
	left: 50%;
	line-height: 5.2em;
	margin-left: -406px;
	margin-top: -250px;
	padding: 15px;
	position: absolute;
	text-align: center;
	top: 50%;
	width: 800px;
}

.erro-botao{
	margin: 35px 0 0 0;
	padding: 20px;
}

.erro-texto{
	text-align: center;
	font-size: 60px;
	font-weight:bold;
	color: #FFFFFF;
	text-shadow: 0px 1px 16px rgba(0,0,0,0.5);
}

.erro-titulo{
	font-size: 80px !important;
	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
}

.font-size-40 {
	font-size: 40px;
}

.img-140 {
	height: 100px;
	width: 100px;
}

.logo-navbar{
	height: 50px;
	width: 40px;
}

.logo-link{
	padding: 0 5px 0 6px !important;
}

.margin-100-0-0-0 {
	margin: 100px 0 0 0;
}

.margin-0-30 {
	margin: 0 30px;
}

.margin-0-20 {
	margin: 0 20px;
}

.margin-0-15 {
	margin: 0 15px;
}

.margin-0-6 {
	margin: 0 6px;
}

.margin-6-0 {
	margin: 6px 0;
}

.margin-15-0 {
	margin: 15px 0;
}

.margin-30-0 {
	margin: 30px 0;
}

.margin-35-0 {
	margin: 35px 0;
}

.margin-250-0 {
	margin: 250px 0;
}

.msg-alert {
	display: none;
}

.nome{
	font-size:20px;
	margin-bottom:-10px;
}

.padding-15-0 {
	padding: 15px 0;
}

.padding-6-0 {
	padding: 6px 0;
}

.padding-0-6 {
	padding: 0 6px;
}

.padding-30-0-0-0 {
	padding: 30px 0 0 0;
}

.panel-divider {
	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
}


#footer {
	position: absolute;
	bottom:0;
	width:100%;
	height:60px;
	line-height: 60px;
	margin-bottom:0;
	background-color: #FFF;
}

#footer .container a {
	color: #2c3e50;
}

#footer a:hover {
	text-decoration: none;
}


.small {
	font-size: 11px
}

.sobrenome{
	font-size:20px;
}

.socio dl{
	margin: 0;
}

.socio{
	margin-bottom: 12px;
}

.titulo{
	font-family:"Montserrat-Bold";
	text-transform:uppercase;
}

.title {
	font-family: Lato;
	font-weight: 500;
	font-size: 100px;
	color: #2C3E52;
	margin: 50px 0px 30px 0px;
}

.subtitle {
	font-family: Lato;
	font-weight: 300;
	font-size: 48px;
	color: #2C3E52;
	margin: 60px 0px 30px 0px;
}

.text {
	font-family: Lato;
	font-weight: 300;
	font-size: 18px;
	line-height: 33px;
	color: #2C3E52;
	margin: 50px 0px 30px 0px;
}

.width-100{
	width:100%;
}

.table tbody {
	border-bottom: 1px solid #111111;
	border-top: 1px solid #111111;
}

.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
	border: none;
}

.has-error input {
  border-color: #a94442;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
}

.has-error label {
  color: #A04442;
}

.has-success input {
  border-color: #2b542c;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #67b168;
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #67b168;
}

.has-success label {
  color: #67B168;
}

